security: thay Entity API bang DTO whitelist